<resources>
    <string name="app_name">ToDoList</string>
    <string name="login_form_title">Login</string>
    <string name="login_form_email">Email</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">Login</string>
    <string name="register_form_title">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Register now</string>
    <string name="add">add</string>
    <string name="logout">logout</string>
    <string name="create_new_record">create new record</string>
    <string name="ara_not_registered">Ara not registered?</string>

</resources>