<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3EB65168"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/loginHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_form_title"
                android:textAlignment="center"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_form_email"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/register_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_form_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:background="@color/black"
                android:text="@string/register_form_title"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:text="@string/log_in"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>